pop links fix on smaller screen

--- a/styles/main.less
+++ b/styles/main.less
@@ -806,5 +806,7 @@ body {
   }
 
   //end of embed asset styling
-
+#pop-links {
+  margin-bottom:-35px;
+}
 }
